# rlex

./: README.md  dune-project  rlex.opam
lib/: automata.ml  dfa.ml  dfa.mli  dune  engine.ml  matcher.ml  nfa.ml  nfa.mli  pattern.ml  patterns.ml  setutils.ml
test/: dune  test_rlex.ml
