(lang dune 3.20)

(name rlex)

(generate_opam_files true)

(source
 (github Raagam-Parmar/rlex))

(authors "Raagam Parmar <raagamparmar@gmail.com>")

(maintainers "Raagam Parmar <raagamparmar@gmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name rlex)
 (synopsis "A Lexical Analyzer Generator in OCaml")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
